--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tabler/icons": "^3.36.1",
+    "@tabler/icons-react": "^3.36.1",
     "mermaid": "^10.9.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
