--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,8 +17,10 @@
     "mermaid": "^10.9.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.13.0",
     "reactflow": "^11.11.4",
+    "remark-gfm": "^4.0.1",
     "shiki": "^3.22.0"
   },
   "devDependencies": {
