--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dagrejs/dagre": "^2.0.3",
     "@tabler/icons": "^3.36.1",
     "@tabler/icons-react": "^3.36.1",
     "@types/dagre": "^0.7.53",
+    "@xyflow/react": "^12.10.0",
     "dagre": "^0.8.5",
+    "elkjs": "^0.11.0",
     "mermaid": "^10.9.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
